force-app/main/default/objects/Purchase_Orders__c/Purchase_Orders__c.object-meta.xml
<CustomObject>
    <label>Client PO</label>
    <nameField>
        <label>PO #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>