force-app/main/default/objects/Purchase_Orders__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <label>WD Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rig 16</fullName>
            </value>
            <value>
                <fullName>Rig 14</fullName>
            </value>
            <value>
                <fullName>Rig 12</fullName>
            </value>
            <value>
                <fullName>Rig 10</fullName>
            </value>
            <value>
                <fullName>Rig 6</fullName>
            </value>
            <value>
                <fullName>Rig 4</fullName>
            </value>
            <value>
                <fullName>Flushby 2</fullName>
            </value>
            <value>
                <fullName>Camp 1</fullName>
            </value>
            <value>
                <fullName>Camp 2</fullName>
            </value>
            <value>
                <fullName>Camp 3</fullName>
            </value>
            <value>
                <fullName>Camp 4</fullName>
            </value>
            <value>
                <fullName>Camp 6</fullName>
            </value>
            <value>
                <fullName>Camp 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>